@@ -15,6 +15,7 @@
 #define WEBSOCKET_LAST_FRAME                0x8
 
 #define WEBSOCKET_OPCODE_TEXT               0x1
+#define WEBSOCKET_OPCODE_BINARY             0x2
 #define WEBSOCKET_OPCODE_CLOSE              0x8
 #define WEBSOCKET_OPCODE_PING               0x9
 #define WEBSOCKET_OPCODE_PONG               0xA
@@ -26,6 +27,8 @@
 
 
 #define WEBSOCKET_FRAME_HEADER_MAX_LENGTH   146 //144 + 2 for possible close status code
+
+#define WEBSOCKET_CLOSING_TIMEOUT           250 //ms
 
 /**
  * here's what a websocket frame looks like
@@ -124,6 +127,7 @@ struct full_subscriber_s {
   ngx_event_t             timeout_ev;
   subscriber_callback_pt  timeout_handler;
   void                   *timeout_handler_data;
+  ngx_event_t             closing_ev;
   ngx_int_t               owner;
   ws_frame_t              frame;
   
@@ -142,6 +146,8 @@ struct full_subscriber_s {
   unsigned                holding:1; //make sure the request doesn't close right away
   unsigned                shook_hands:1;
   unsigned                connected:1;
+  unsigned                pinging:1;
+  unsigned                closing:1;
   unsigned                finalize_request:1;
   unsigned                awaiting_destruction:1;
 };// full_subscriber_t
@@ -466,6 +472,8 @@ subscriber_t *websocket_subscriber_create(ngx_http_request_t *r, nchan_msg_id_t 
   fsub->holding = 0;
   fsub->shook_hands = 0;
   fsub->connected = 0;
+  fsub->pinging = 0;
+  fsub->closing = 0;
   fsub->sub.cf = ngx_http_get_module_loc_conf(r, nchan_module);
   fsub->sub.enqueued = 0;
   
@@ -489,6 +497,12 @@ subscriber_t *websocket_subscriber_create(ngx_http_request_t *r, nchan_msg_id_t 
   fsub->dequeue_handler = empty_handler;
   fsub->dequeue_handler_data = NULL;
   fsub->awaiting_destruction = 0;
+  
+  ngx_memzero(&fsub->closing_ev, sizeof(fsub->closing_ev));
+#if nginx_version >= 1008000  
+  fsub->closing_ev.cancelable = 1;
+#endif
+  
   
   //initialize reusable chains and bufs
   ngx_memzero(&fsub->hdr_buf, sizeof(fsub->hdr_buf));
@@ -721,6 +735,10 @@ static ngx_int_t websocket_dequeue(subscriber_t *self) {
     ngx_del_timer(&fsub->ping_ev);
   }
   
+  if(fsub->closing_ev.timer_set) {
+    ngx_del_timer(&fsub->closing_ev);
+  }
+  
   if(self->destroy_after_dequeue) {
     websocket_subscriber_destroy(self);
   }
@@ -796,6 +814,9 @@ static void websocket_reading(ngx_http_request_t *r) {
   uint64_t                    i;
   ngx_buf_t                   buf;
   ngx_pool_t                 *temp_pool = NULL;
+  ngx_buf_t                   msgbuf;
+  int                         close_code;
+  ngx_str_t                   close_reason;
   
   set_buffer(&buf, frame->header, frame->last, 8);
 
@@ -894,13 +915,16 @@ static void websocket_reading(ngx_http_request_t *r) {
               frame->payload[i] = frame->payload[i] ^ frame->mask_key[i % 4];
             }
           }
-          
-          if (!is_utf8(frame->payload, frame->payload_len)) {
-            goto finalize;
-          }
-          
-          if (frame->opcode == WEBSOCKET_OPCODE_TEXT) {
-            ngx_buf_t     msgbuf;
+        }
+        frame->step = WEBSOCKET_READ_START_STEP;
+        frame->last = NULL;
+        switch(frame->opcode) {
+          case WEBSOCKET_OPCODE_TEXT:
+            if (!is_utf8(frame->payload, frame->payload_len)) {
+              goto finalize;
+            }
+            //intentional fall-through
+          case WEBSOCKET_OPCODE_BINARY:
             init_msg_buf(&msgbuf);
             
             msgbuf.start = frame->payload;
@@ -911,16 +935,8 @@ static void websocket_reading(ngx_http_request_t *r) {
             //DBG("we got data %V", &msg_in_str);
             
             websocket_publish(fsub, &msgbuf);
-          }
+            break;
           
-          if (temp_pool != NULL) {
-            ngx_destroy_pool(temp_pool);
-            temp_pool = NULL;
-          }
-        }
-        frame->step = WEBSOCKET_READ_START_STEP;
-        frame->last = NULL;
-        switch(frame->opcode) {
           case WEBSOCKET_OPCODE_PING:
             DBG("%p got pinged", fsub);
             websocket_send_frame(fsub, WEBSOCKET_PONG_LAST_FRAME_BYTE, 0);
@@ -931,10 +947,25 @@ static void websocket_reading(ngx_http_request_t *r) {
             break;
             
           case WEBSOCKET_OPCODE_CLOSE:
-            DBG("%p wants to close", fsub);
+            if(frame->payload_len >= 2) {
+              ngx_memcpy(&close_code, frame->payload, 2);
+              close_code = ntohs(close_code);
+              close_reason.data = frame->payload + 2;
+              close_reason.len = frame->payload_len - 2;
+            }
+            else {
+              close_code = 0;
+              close_reason.data = (u_char *)"";
+              close_reason.len = 0;
+            }
+            ERR("%p wants to close (code %i reason \"%V\")", fsub, close_code, &close_reason);
             websocket_send_close_frame(fsub, 0, NULL);
             goto finalize;
             break; //good practice?
+        }
+        if (temp_pool != NULL) {
+          ngx_destroy_pool(temp_pool);
+          temp_pool = NULL;
         }
         return;
 
@@ -950,6 +981,11 @@ static void websocket_reading(ngx_http_request_t *r) {
   }
 
 exit:
+  
+  if (temp_pool != NULL) {
+    ngx_destroy_pool(temp_pool);
+    temp_pool = NULL;
+  }
   if (rc == NGX_AGAIN) {
     frame->last = buf.last;
     if (!c->read->ready) {
@@ -1114,10 +1150,25 @@ static ngx_chain_t *websocket_msg_frame_chain(full_subscriber_t *fsub, nchan_msg
   return websocket_frame_header_chain(fsub, WEBSOCKET_TEXT_LAST_FRAME_BYTE, ngx_buf_size(msg_buf));
 }
 
+static void closing_ev_handler(ngx_event_t *ev) {
+  full_subscriber_t *fsub = (full_subscriber_t *)ev->data;
+  DBG("%p closing timeout", fsub);
+  ngx_http_finalize_request(fsub->sub.request, NGX_OK);
+}
 
 static ngx_int_t websocket_send_close_frame(full_subscriber_t *fsub, uint16_t code, ngx_str_t *err) {
   nchan_output_filter(fsub->sub.request, websocket_close_frame_chain(fsub, code, err));
   fsub->connected = 0;
+  if(fsub->closing == 1) {
+    ERR("%p already sent close frame");
+  }
+  else {
+    fsub->closing = 1;
+    fsub->closing_ev.handler = closing_ev_handler;
+    fsub->closing_ev.data = fsub;
+    fsub->closing_ev.log = ngx_cycle->log;
+    ngx_add_timer(&fsub->closing_ev, WEBSOCKET_CLOSING_TIMEOUT);
+  }
   return NGX_OK;
 }
 
