@@ -1,3 +1,5 @@
+ fix: accept websocket binary data frames
+ fix: proper handling of websocket close frames
 0.99.7 (Mar. 10 2016)
  fix: websocket infinite ping loop after reload
  feature: nchan_subscriber_message_id_custom_etag_header for misbehaving proxies that eat etags
